--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.13",
+    "@mantine/ds": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "@tabler/icons-react": "^2.22.0",
+    "@tauri-apps/api": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tauri-apps/api": "^1.3.0"
+    "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.3.1",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.5",
-    "vite": "^4.2.1",
-    "@tauri-apps/cli": "^1.3.1"
+    "vite": "^4.2.1"
   }
 }
